[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/Minerals/Red Crystal.png" type="Texture" id=1]
[ext_resource path="res://sprites/Sounds/mineralgrabwav.wav" type="AudioStream" id=2]
[ext_resource path="res://ImpulseMineral.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.7988
height = 68.622

[node name="ImpulseMineral" type="Area2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MineralGrab" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -4 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_ImpulseMineral_body_entered"]
[connection signal="finished" from="MineralGrab" to="." method="_on_MineralGrab_finished"]
